# LumaStudio

./: .gitignore  CHANGELOG.md  README.md  README_V1_5.md  main.js  package-lock.json  package.json  preload.js
.gitignore/: node_modules.txt
luma_engine_esp32/: CMakeLists.txt  README_ENGINE.md
luma_engine_esp32/main/: CMakeLists.txt  luma_audio.c  luma_audio.h  luma_behaviors.c  luma_behaviors.h  luma_config.h  luma_events.c  luma_events.h  luma_game.c  luma_game.h  luma_input.c  luma_input.h  luma_lpk.c  luma_lpk.h  luma_render.c  luma_render.h  luma_runtime.c  luma_runtime.h  luma_save.c  luma_save.h  luma_sd.c  luma_sd.h  luma_types.h  main.c
renderer/: animation-editor.js  app.js  behaviors.js  event-sheet.js  gif-encoder.js  index.html  library-browser.js  music-editor.js  object-editor.js  simulator.js  sprite-editor.js  style.css
renderer/modules/: animation-editor.js  asset-lab.js  frame-renderer.js  history.js  memory.js  music-editor.js  navigation.js  object-event-db.js  palette.js  rgb565.js  sprite-editor.js
